--- a/templates/login.html
+++ b/templates/login.html
@@ -32,8 +32,8 @@
                 <div class="input-group">
                     <span class="input-group-text bg-white text-primary"><i class="bi bi-geo-alt-fill"></i></span>
                     <select name="sucursal" class="form-select" required>
-                        <option value="Quito" {% if session.get('sucursal') == 'Quito' %}selected{% endif %}>🏔️ Nodo Quito</option>
-                        <option value="Guayaquil" {% if session.get('sucursal') == 'Guayaquil' %}selected{% endif %}>🌊 Nodo Guayaquil</option>
+                        <option value="Quito" {% if session.get('sucursal') == 'Quito' %}selected{% endif %}>Nodo Quito</option>
+                        <option value="Guayaquil" {% if session.get('sucursal') == 'Guayaquil' %}selected{% endif %}>Nodo Guayaquil</option>
                     </select>
                 </div>
             </div>
