--- a/templates/index.html
+++ b/templates/index.html
@@ -53,7 +53,7 @@
                   class="form-select form-select-sm bg-dark text-white border-secondary shadow-none"
                   style="cursor: pointer;"
                 >
-                  <option value="Quito" {% if sucursal == 'Quito' %}selected{% endif %}>📍 Tienda Quito</option>
+                  <option value="Quito" {% if sucursal == 'Quito' %}selected{% endif %}>Tienda Quito</option>
                   <option value="Guayaquil" {% if sucursal == 'Guayaquil' %}selected{% endif %}>Tienda Guayaquil</option>
                 </select>
               </form>
@@ -124,11 +124,9 @@
         <div class="col-md-4 mb-4">
           <div class="card h-100 product-card shadow-sm">
             <div class="card-body text-center p-4">
-              
-              <div class="bg-light d-inline-block p-4 mb-3">
+              <div class="bg-light d-inline-block p-4 mb-3 rounded-4">
                 <i class="bi bi-laptop fs-1 text-primary"></i>
               </div>
-              
               <h5 class="card-title fw-bold">{{ p.nombre }}</h5>
               <p class="text-muted mb-3">{{ p.marca }}</p>
               <h3 class="text-primary mb-3">
